--- a/tabby-ssh/src/components/sftpPanel.component.pug
+++ b/tabby-ssh/src/components/sftpPanel.component.pug
@@ -22,7 +22,7 @@
                 (click)='goUp()'
             )
                 i.fas.fa-fw.fa-level-up-alt
-                div 增加
+                div 上级
             .list-group-item.list-group-item-action.d-flex.align-items-center(
                 *ngFor='let item of fileList',
                 (contextmenu)='showContextMenu(item, $event)',
