--- a/tabby-terminal/src/components/appearanceSettingsTab.component.pug
+++ b/tabby-terminal/src/components/appearanceSettingsTab.component.pug
@@ -89,7 +89,7 @@ h3.mb-3 外观
 
     .form-line
         .header
-            .title 闪烁光标
+            .title 光标闪烁
 
         toggle(
             [(ngModel)]='config.store.terminal.cursorBlink',
