--- a/tabby-plugin-manager/src/components/pluginsSettingsTab.component.pug
+++ b/tabby-plugin-manager/src/components/pluginsSettingsTab.component.pug
@@ -21,7 +21,7 @@ ul.nav-tabs.mb-2(ngbNav, #nav='ngbNav')
                     type='text',
                     [(ngModel)]='_1',
                     (ngModelChange)='searchAvailable(_1)',
-                    placeholder='Search plugins'
+                    placeholder='搜索插件'
                 )
 
             ngb-accordion.mb-4(*ngIf='availablePlugins$', [closeOthers]='true')
